--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>G4Music</title>
+    <title>MinMusic</title>
   </head>
   <body>
     <div id="root"></div>
